<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pracify</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_new">New</string>
    <string name="action_refresh">Sync</string>
    <string name="title_activity_home">Recordings</string>
    <string name="title_activity_recording">Record</string>
    <string name="img_record">Recording Image</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_play">Play Recording</string>
    <string name="stop_play">Stop Playing</string>
    <string name="title_activity_save_recording">Save Recording</string>
    <string name="enter_name">Name</string>
    <string name="enter_desc">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="share_with">Share With : </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_hint">Enter File Name</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>

</resources>
